--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="harjoitus.html">Harjoitussivu</a></li> 
         <li><a href="(Lisää tänne linkki myöhemmin)">Projekti</a></li>
+		<img src="internet_kuva.jpg" width = '500' height = '350'>
     </ul>
 </body>
 </html> 
