--- a/Harjoitus/harjoitus.html
+++ b/Harjoitus/harjoitus.html
@@ -11,9 +11,11 @@
 		
 	
 		<h2>Mansikka-kakku kitkatreunoilla ja smarties-karkeilla</h2>
-			<img src="mansikkakakku.jpg" width = '350' height = '400'>
-		<h2>Resepti</h2>
-			<p>Kakkupohja:
+			<p><a class=jee> <img src="mansikkakakku.jpg" width = '350' height = '400'></a></p>
+			
+			<h3>Resepti</h3>
+			<p>
+			Kakkupohja:
 			3 munaa
 			1,5dl jauhoja
 			1,5dl sokeria
@@ -33,9 +35,9 @@
 		<div>
 		<h2>Juustokakku </h2>
 	
-			<img src="juustokakku.jpg" width = '350' height = '400'>
+			<p><a class=jee> <img src="juustokakku.jpg" width = '350' height = '400'></a></p>
 			
-			<p>Salted caramel cheesecake</p>
+			<h3>Salted caramel cheesecake</h3>
 			<p>Pohja:
 			170 g digestive-keksejä
 			80 g voita
@@ -43,11 +45,11 @@
 			<br>Täyte:
 			400 g maustamatonta tuorejuustoa (huoneenlämpöistä)
 			1½ dl sokeria
-			1 tl vaniljasokeria
+			<br>1 tl vaniljasokeria
 			1 rkl sitruunamehua
 			ripaus suolaa
 			2 kananmunaa
-			1 rkl maissitärkkelystä
+			<br>1 rkl maissitärkkelystä
 
 			<br>Kinuski:
 			1 dl fariinisokeria
