--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Minun kurssitehtävien palautussivu</h1>
     <p>Laura Alatalo NDV23SN</p>
     <ul>
-        <li><a href="harjoitus/harjoitus.html">Harjoitussivu</a></li> 
+        <li><a href="Harjoitus/harjoitus.html">Harjoitussivu</a></li> 
         <li><a href="(Lisää tänne linkki myöhemmin)">Projekti</a></li>
 		<img src="internet_kuva.jpg" width = '500' height = '350'>
     </ul>
